--- a/researchNotebook.ipynb
+++ b/researchNotebook.ipynb
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eefe045d",
+   "id": "cca53a5f",
    "metadata": {},
    "source": [
     "#### Make a new column that will hold our cleaned data for each comment:"
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "dd84df2b",
+   "id": "1429a8e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "dbee363d",
+   "id": "068f959d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "23ab71a5",
+   "id": "7f1bed58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9e6fbca8",
+   "id": "74ad9fc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6f6b4a43",
+   "id": "e4a681fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "01a4f503",
+   "id": "8ef5a348",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "aec189e8",
+   "id": "96761d8c",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3438ba74",
+   "id": "47955956",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1c061ab",
+   "id": "ad9b3f55",
    "metadata": {},
    "source": [
     "## 1.3 Feature Engineering"
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e372cba",
+   "id": "b6aa1a92",
    "metadata": {},
    "source": [
     "I want to find the average length of each comment in order to see how many tags we should take out:"
@@ -1092,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "add47031",
+   "id": "08e506bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8b8f670d",
+   "id": "714fa88d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f42aa9f0",
+   "id": "46da7566",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ea543ab2",
+   "id": "b6e6f1c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "73b738da",
+   "id": "d1115d22",
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1c1d769d",
+   "id": "be9d4f09",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e15a996c",
+   "id": "7198b888",
    "metadata": {
     "scrolled": true
    },
@@ -1615,7 +1615,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "87b33cdf",
+   "id": "f21c5c5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5fb303dc",
+   "id": "6b0e832f",
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3a69c5b3",
+   "id": "23a3e575",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "acbcd806",
+   "id": "89b38c23",
    "metadata": {
     "scrolled": true
    },
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "2e7408b1",
+   "id": "4d712ac2",
    "metadata": {
     "scrolled": true
    },
@@ -1758,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "25f83f17",
+   "id": "3f8db306",
    "metadata": {
     "scrolled": true
    },
@@ -1787,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "1313b842",
+   "id": "804d3aba",
    "metadata": {},
    "outputs": [
     {
@@ -1809,7 +1809,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8a93c4d0",
+   "id": "808151df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1819,7 +1819,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "28acd3ca",
+   "id": "1a7ecccb",
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "11902200",
+   "id": "421bd8de",
    "metadata": {},
    "outputs": [
     {
@@ -1870,7 +1870,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "57c3a53c",
+   "id": "85678ab9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1897,7 +1897,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9fa69c67",
+   "id": "8ded9105",
    "metadata": {},
    "outputs": [
     {
@@ -1918,7 +1918,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "adddabb8",
+   "id": "d1c6fa7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1929,7 +1929,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "7c0a4088",
+   "id": "1a429744",
    "metadata": {
     "scrolled": true
    },
@@ -1952,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ff30143e",
+   "id": "50b7ca30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1963,7 +1963,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e5974199",
+   "id": "a94b60e5",
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +1984,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6c320047",
+   "id": "7dda51d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,7 +1994,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11085de6",
+   "id": "b44fd357",
    "metadata": {},
    "source": [
     "## Building our Model"
@@ -2003,7 +2003,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ae0df782",
+   "id": "ef84addd",
    "metadata": {
     "scrolled": true
    },
@@ -2029,7 +2029,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "2536d8b3",
+   "id": "21cb311a",
    "metadata": {
     "scrolled": true
    },
@@ -2095,7 +2095,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2f6a773a",
+   "id": "873a0c06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2110,7 +2110,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "a2f00857",
+   "id": "571eeacf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2120,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ce427257",
+   "id": "2189586e",
    "metadata": {
     "scrolled": false
    },
@@ -2271,7 +2271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2cf4b32",
+   "id": "470dc164",
    "metadata": {},
    "source": [
     "## Evaluating our Model"
@@ -2280,7 +2280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "8994946b",
+   "id": "ed9ee630",
    "metadata": {
     "scrolled": true
    },
@@ -2315,7 +2315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acc63bfc",
+   "id": "60f89074",
    "metadata": {},
    "source": [
     "## Predictions"
@@ -2324,7 +2324,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "cdf2cc69",
+   "id": "c2a2d525",
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2346,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "32e0ca23",
+   "id": "70016808",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2368,7 +2368,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "0f90fd14",
+   "id": "b1b11593",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2380,7 +2380,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "5f210e90",
+   "id": "821e8921",
    "metadata": {},
    "outputs": [
     {
@@ -2465,16 +2465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "b38f64bc",
+   "execution_count": 70,
+   "id": "32820eca",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 314ms/step\n",
-      "Predicted Sentiment: 10\n"
+      "1/1 [==============================] - 0s 358ms/step\n",
+      "Predicted Label: 10\n"
      ]
     }
    ],
@@ -2488,7 +2488,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "eae5c1b6",
+   "id": "2cf93ad5",
    "metadata": {},
    "outputs": [
     {
@@ -2650,7 +2650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeac9f95",
+   "id": "c6b4576d",
    "metadata": {},
    "outputs": [],
    "source": []
