--- a/UtilFunctions.ipynb
+++ b/UtilFunctions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0cdb2c68",
+   "id": "ea8b4ed5",
    "metadata": {
     "scrolled": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e713a9e2",
+   "id": "78370622",
    "metadata": {},
    "source": [
     "## Comment Model Functions"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e69a267d",
+   "id": "efb8e4a8",
    "metadata": {},
    "source": [
     "## Section 2 Functions"
@@ -47,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "5951b653",
+   "execution_count": 2,
+   "id": "1f4565da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "94140c41",
+   "execution_count": 3,
+   "id": "f5299dd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "d60f7ece",
+   "execution_count": 4,
+   "id": "5a29997a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "552ebcd4",
+   "execution_count": 5,
+   "id": "a836a83d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,8 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "29f9c7da",
+   "execution_count": 6,
+   "id": "129cd502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,8 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "34ba0ab6",
+   "execution_count": 7,
+   "id": "e6a05a34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,8 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "ae12ef3a",
+   "execution_count": 8,
+   "id": "0e8cdf10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "00cdfc8c",
+   "execution_count": 9,
+   "id": "c9b389c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,8 +234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "453fac98",
+   "execution_count": 10,
+   "id": "fbaf370d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "c9ba01af",
+   "execution_count": 11,
+   "id": "d2a2b249",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "129138a8",
+   "execution_count": 12,
+   "id": "56391b49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b7f3a19",
+   "id": "c4d43955",
    "metadata": {},
    "source": [
     "## Section 3 Functions"
@@ -303,8 +303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "6dbd94da",
+   "execution_count": 13,
+   "id": "4c2f2b91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,8 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "6d11ff34",
+   "execution_count": 14,
+   "id": "a7c41400",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,13 +346,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d494b26",
+   "metadata": {},
+   "source": [
+    "# Fix function below to take in any column instead of comment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "77409f82",
+   "id": "db88b3c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_encoded_values(df, ids, masks, tokenizer, sequence_len):\n",
+    "def generate_encoded_values(df, ids, masks, tokenizer, sequence_len, column):\n",
     "    \"\"\"\n",
     "        This function will encode each comment 1 by 1\n",
     "        \n",
@@ -381,8 +389,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "daffd23a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_encoded_values_dynamically(df, ids, masks, tokenizer, sequence_len, column):\n",
+    "    \"\"\"\n",
+    "        This function will encode each comment 1 by 1\n",
+    "        \n",
+    "        args:\n",
+    "            df: pandas dataframe\n",
+    "            ids: Xids\n",
+    "            masks: attn_mask\n",
+    "            tokenizer: huggingface AutoTokenizer\n",
+    "            \n",
+    "        return:\n",
+    "            ids: input ids to pass to BERT model\n",
+    "            masks: attention masks to pass to BERT model\n",
+    "    \"\"\"\n",
+    "    for i, text in tqdm(enumerate(df[column])):\n",
+    "        tokenized_text = tokenizer.encode_plus(\n",
+    "                              text,\n",
+    "                              max_length=sequence_len,      #max length of each comment so we can truncate if needed\n",
+    "                              truncation=True,              #if the comment is longer than max_length only take up to max_length values\n",
+    "                              padding='max_length',         #make all elements the same size of max_length\n",
+    "                              add_special_tokens=True,      #add [cls] [pad] [sep]\n",
+    "                              return_tensors='tf'           #return the data as tensorflow tensors\n",
+    "        )\n",
+    "        ids[i, :] = tokenized_text.input_ids          #at current index to the end tokenize the input ids\n",
+    "        masks[i, :] = tokenized_text.attention_mask   #at current index to the end tokenize the mask\n",
+    "    return ids, masks"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "0d120fa4",
+   "id": "e46abb10",
    "metadata": {},
    "source": [
     "## Section 5 Functions"
@@ -391,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7e9f702a",
+   "id": "cdf36115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cc9d0c6",
+   "id": "590dfdaa",
    "metadata": {},
    "source": [
     "## Section 6 Functions"
@@ -427,8 +470,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "840b4735",
+   "execution_count": 18,
+   "id": "d42402cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "58154c83",
+   "id": "44527380",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "af71830d",
+   "id": "cdfe87d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bacff277",
+   "id": "3571cf70",
    "metadata": {},
    "source": [
     "## Noisy Tag Model Functions"
@@ -515,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fa2ac8b6",
+   "id": "fe545e87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "51ccc7d3",
+   "id": "d6e46a19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d6ab0a66",
+   "id": "2ae0761e",
    "metadata": {},
    "outputs": [],
    "source": [
